[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "cp38-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
before-all = [
    "yum install -y cmake lzop libzip-devel libzstd-devel libacl-devel xz-devel lz4-devel zlib-devel",
    "bash {project}/ci/download_libarchive.sh",
    "bash {project}/ci/build_libarchive.sh",
]

[tool.cibuildwheel.macos]
before-all = "brew install libarchive"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
