[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "cp38-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
before-all = [
    "yum install -y cmake lzop libzip-devel libzstd-devel libacl-devel xz-devel lz4-devel zlib-devel",
    "bash {project}/ci/download_libarchive.sh",
    "bash {project}/ci/build_libarchive.sh",
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install cmake zstd lz4 xz libb2",
    "bash {project}/ci/download_libarchive.sh",
    "bash {project}/ci/build_libarchive.sh",
]

[tool.cibuildwheel.windows]
before-all = "ci\\build_libarchive.cmd"
before-build = "pip install delvewheel"
environment = { INCLUDE = "build_ci\\install\\include", LIB = "build_ci\\install\\lib" }
repair-wheel-command = "delvewheel repair -w {dest_dir} --add-path build_ci\\install\\bin {wheel}"
