[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0.12"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "cp38-*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
before-all = [
    "bash {project}/ci/install_deps.sh",
    "bash {project}/ci/download_libarchive.sh",
    "bash {project}/ci/build_libarchive.sh",
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install cmake zstd lz4 xz libb2",
    "bash {project}/ci/download_libarchive.sh",
    "sudo bash {project}/ci/build_libarchive.sh",
]
environment = { LDFLAGS = "-L/usr/local/lib", CPPFLAGS = "-I/usr/local/include", MACOSX_DEPLOYMENT_TARGET = "14.0" }

[tool.cibuildwheel.windows]
archs = "AMD64"
before-all = "ci\\build_libarchive.cmd"
before-build = "pip install delvewheel"
environment = { INCLUDE = "build_ci/install/include", LIB = "build_ci/install/lib" }
repair-wheel-command = "delvewheel repair -w {dest_dir} --add-path build_ci/install/bin {wheel}"
